item module with swagger
