# src/v1/models/item.js
@@ -1,0 +1,40 @@
+const mongoose = require("mongoose");
+const { user, item, group } = require("../constants/collections");
+const itemSchema = new mongoose.Schema(
+  {
+    name: {
+      type: String,
+      default: null,
+    },
+    groupId: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: group.model,
+      default: null,
+    },
+    unit: {
+      type: String,
+      default: null,
+    },
+    createdBy: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: user.model,
+      default: null,
+    },
+    is_active: {
+      type: Boolean,
+      default: true,
+    },
+    created_on: {
+      type: Date,
+      default: new Date(),
+    },
+    modified_on: {
+      type: Date,
+      default: new Date(),
+    },
+  },
+  {
+    timestamps: { createdAt: "created_on", updatedAt: "modified_on" },
+  }
+);
+module.exports = mongoose.model(item.model, itemSchema, item.collection);
